# navrim-phosphobot

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.ps1  install.sh  pyproject.toml
inference/: README.md  pyproject.toml
inference/ACT/: client.py  inference.py  server.py
inference/gr00t/: client.py  inference.py  server.py
inference/pi0/: client.py
phosphobot/: MANIFEST.in  README.md  __init__.py  camera.py  configs.py  control_signal.py  models.py  pyproject.toml  recorder.py  training.py  types.py  utils.py
phosphobot/ai/: __init__.py  components.py  model.py
phosphobot/am/: __init__.py  act.py  base.py  gr00t.py  models.py
phosphobot/api/: __init__.py  client.py  raw_client.py
phosphobot/api/auth/: client.py  raw_client.py
phosphobot/api/camera/: __init__.py  client.py  raw_client.py
phosphobot/api/camera/types/: __init__.py  video_feed_for_camera_video_camera_id_get_request_camera_id.py
phosphobot/api/control/: __init__.py  client.py  raw_client.py
phosphobot/api/control/types/: __init__.py  auto_control_request_type_of_model.py  environment.py  source.py
phosphobot/api/core/: client_wrapper.py
phosphobot/api/errors/: __init__.py
phosphobot/api/recording/: __init__.py  client.py  raw_client.py
phosphobot/api/recording/types/: __init__.py  recording_start_request_episode_format.py  recording_start_request_video_codec.py
phosphobot/api/training/: client.py  raw_client.py
phosphobot/api/types/: __init__.py  admin_settings_response.py  admin_settings_response_video_codec.py  admin_settings_token_response.py  all_cameras_status.py  auth_response.py  body_submit_token_admin_form_post.py  body_sync_dataset_dataset_sync_post.py  body_sync_dataset_sync_dataset_post.py  browse_files_response.py  calibrate_response.py  calibrate_response_calibration_status.py  dataset_list_response.py  end_effector_position.py  hugging_face_token_request.py  item_info.py  joints_read_response.py  login_credentials.py  login_credentials_request.py  model_status.py  model_status_model_status.py  model_status_response.py  model_status_response_model_status.py  model_training_config.py  recording_stop_response.py  robot_config.py  robot_config_status.py  robot_connection_response.py  server_status.py  server_status_ai_running_status.py  session.py  session_reponse.py  single_camera_status.py  single_camera_status_camera_type.py  status.py  status_response.py  torque_read_response.py  training_config.py  user_settings_request.py  viz_settings_response.py  (+1 more)
phosphobot/api/update/: client.py  raw_client.py
phosphobot/control/: client.py
phosphobot/control/types/: __init__.py  unit.py
phosphobot/dashboard/: README.md  index.html  vite.config.ts
phosphobot/dashboard/src/: main.tsx
phosphobot/dashboard/src/lib/: hooks.ts  utils.ts
phosphobot/dashboard/src/pages/: BrowsePage.tsx  ControlPage.tsx  JointControlPage.tsx  SingleArmReplayPage.tsx
phosphobot/hooks/: hook-go2_webrtc_driver.py  hook-wasmtime.py
phosphobot/models/: __init__.py  dataset.py
phosphobot/phosphobot/: __init__.py  _version.py  ai_control.py  api_supabase.py  app.py  camera.py  leader_follower.py  main.py  posthog.py  recorder.py  robot.py  sentry.py  supabase.py  telemetry.py  teleoperation.py  types.py  utils.py
phosphobot/phosphobot/agents/: client.py  graph.py  robot.py  server.py
phosphobot/phosphobot/am/: act.py  base.py  gr00t.py  pi0.py
phosphobot/phosphobot/endpoints/: __init__.py  auth.py  camera.py  chat.py  control.py  networking.py  pages.py  recording.py  training.py  update.py
phosphobot/phosphobot/hardware/: __init__.py  base.py  calibrate.py  go2.py  koch11.py  lekiwi.py  phosphobot.py  piper.py  sim.py  so100.py  so100leader.py  wx250s.py
phosphobot/phosphobot/hardware/motors/: __init__.py  configure_motor.py  dynamixel.py  feetech.py  find_motor_bus.py  local_test.py  motor_utils.py
phosphobot/phosphobot/models/: __init__.py  camera.py  dataset.py  lerobot_dataset.py  robot.py
phosphobot/phosphobot/workaround/: db.py
phosphobot/recording/: client.py
phosphobot/resources/: .gitignore  agilex_can_activate.sh
phosphobot/resources/calibration/: koch-v1.1_58CD176940_config.json  so-100_12V_config.json  so-100_58FD016588_config.json  so-100_58FD017139_config.json  so-100_58FD017230_config.json  wx-250s_FT94W6U7_config.json
phosphobot/tests/: choregraphy.py  read_positions.py  udp_client.py  utils.py
phosphobot/tests/api/: summarize.py  test_api.py  test_websocket.py
phosphobot/tests/phosphobot/: test_SO100.py  test_base.py  test_base_manipulator.py  test_koch.py
phosphobot/tests/realsense/: README.md  display_video_and_depth.py
phosphobot/tests/teleop/: test_SO100.py  test_base.py  test_koch.py
phosphobot/types/: calibrate_response.py  joints_read_response.py  recording_stop_response.py  server_status.py
scripts/datasets/: README.md  lerobot_stats_compute.py  push_dataset_to_hf.py  pyproject.toml  remove_duplicate_arms.py  repair_dataset.py
teleop/: .gitignore  README.md  pyproject.toml
teleop/dashboard/: package-lock.json  package.json
teleop/dashboard/src/: index.css  types.ts
teleop/resources/calibration/: so-100_58CD176683_config.json  so-100_58FA081789_config.json  so-100_58FA082637_config.json  so-100_58FD016236_config.json  so-100_58FD017238_config.json  so-100_6V_config.json
teleop/resources/default/: so-100-12V.json  so-100-leader-6V.json  wx-250s-12V.json
teleop/teleop/: _version.py  app.py  camera.py  leader_follower.py  main.py  posthog.py  recorder.py  robot.py  sentry.py  supabase.py  teleoperation.py  utils.py
teleop/teleop/endpoints/: __init__.py  auth.py  camera.py  control.py  networking.py  pages.py  recording.py  training.py  update.py
teleop/teleop/hardware/: __init__.py  base.py  calibrate.py  koch11.py  piper.py  so100.py  so100leader.py  wx250s.py
teleop/teleop/models/: __init__.py
teleop/tests/: choregraphy.py  read_positions.py  test_identify_cameras.html  utils.py
teleop/tests/api/: test_api.py
teleop/tests/teleop/: test_SO100.py  test_base.py  test_koch.py
(+181 files in other folders)
