[project]
name = "phosphobot"
version = "0.0.3"
description = "The AI-ready robotics dev kit, with built-in remote control."
authors = [{ name = "phospho", email = "contact@phospho.ai" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
