[project]
name = "phosphobot"
version = "0.0.8"
description = "The AI-ready robotics dev kit, with built-in remote control."
authors = [{ name = "phospho", email = "contact@phospho.ai" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "fastparquet>=2024.11.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "numpy<2",
    "opencv-python>=4.11.0.86",
    "rich>=13.9.4",
    "pandas-stubs>=2.2.2.240807",
    "huggingface-hub>=0.29.0",
]

[dependency-groups]
dev = ["pyinstrument>=5.0.0"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
packages = ["phosphobot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["phosphobot/urdf/", "phosphobot"]
