[project]
name = "phosphobot"
version = "0.0.19"
description = "The AI-ready robotics dev kit, with built-in remote control and action models support."
authors = [{ name = "phospho", email = "contact@phospho.ai" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
    "fastparquet>=2024.11.0",
    "ffmpeg-python>=0.2.0",
    "loguru>=0.7.3",
    "numpy<2",
    "opencv-python-headless>=4.0", # Needed for compatibility with gr00t-N1
    "rich>=13.9.4",
    "pandas-stubs>=2.2.2.240807",
    "huggingface-hub>=0.29.0",
    "json-numpy>=2.1.0",
    "fastapi>=0.115.11",
    "zmq>=0.0.0",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.0.0",
    "types-pyyaml>=6.0.12.20241230",
    "types-requests>=2.32.0.20250306",
    "mypy>=1.15.0",
]

[project.optional-dependencies]
realsense = [
    "pyrealsense2>=2.54; platform_system == 'Linux'",
    "pyrealsense2>=2.54; platform_system == 'Windows'",
    "pyrealsense2-macosx>=2.54; platform_system == 'Darwin'",
]
openpi = ["openpi-client>=0.1.0"]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
packages = ["phosphobot"]

[tool.uv.sources]
# We are cloning from our fork instead of the original repo (https://github.com/Physical-Intelligence/openpi) 
# because we had the error unknow host: github.com
openpi-client = { git = "https://github.com/phospho-app/openpi.git", subdirectory = "packages/openpi-client", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["phosphobot/urdf/", "phosphobot"]
