[project]
name = "ai_inference"
version = "0.1.0"
description = "Inference servers for AI models"
requires-python = ">=3.11, <3.14"
dependencies = [
    "huggingface_hub",
    "fastapi",
    "transformers",
    "numpy",
    "torch",
    "uvicorn",
    "json_numpy",
    "packaging>=24.2",
    "lerobot",
]

[tool.uv.sources]
lerobot = { path = "../../lerobot", editable = true }
