[project]
name = "scripts"
version = "0.1.0"
description = "Le Robot datasets editor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "huggingface-hub>=0.27.1",
    "loguru>=0.7.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "tyro>=0.9.18",
    "pyarrow>=19.0.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "av>=14.2.1",
]
